Fixed random test failures in com/sun/jini/test/impl/outrigger/leasing/UseTxnMgrSpaceLeaseTestRenewCancel.td
Fixed inconsistent synchronization in JoinManager

Fixed one synchronization issue in LookupLocatorDiscovery

Made LeaseMap implementations thread safe.

Fixed TxnConstants

Simplified EventRegistrationWatcher


git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/skunk/qa_refactor/trunk@1476080 13f79535-47bb-0310-9956-ffa450edef68